--- a/estilo.css
+++ b/estilo.css
@@ -57,6 +57,10 @@ section{
     font-size: 3.5vw;
 }
 
+section p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -65,12 +69,27 @@ section.normal{
 section.imagem{
     background-color: rgba(0, 0, 0, 0.678);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.603);
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.281);
+    background-color: rgba(0, 0, 0, 0.397);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+    background-image: url('../projeto-cordel/imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url('../projeto-cordel/imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
 }
 
 footer{
